Make scrollbar always visible to fix modal issue
Previously "scrollbar-gutter: stable" left empty space when there was no scrollbar and modal box was open.

--- a/src/app.css
+++ b/src/app.css
@@ -562,7 +562,7 @@
 	font-weight: 400;
 
 	color-scheme: dark;
-	scrollbar-gutter: stable;
+	overflow-y: scroll;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
